# ticketmaster-football-club-brentford

./: README.md  pyproject.toml  requirements.txt  run_kedro_dev.ipynb  run_kedro_prod.ipynb  run_kedro_test.ipynb
conf/base/: catalog.yml  globals.yml
conf/base/parameters/: 01_athena_ingestion.yml  02_ticket_event_aggregation.yml  05_event_feature_creation.yml  data_preparation.yml
conf/s3_dev/: globals.yml
conf/s3_prod/: globals.yml
conf/s3_test/: globals.yml
databricks/: TM_ML_BRENTFORD_Cluster.tmpl  TM_ML_BRENTFORD_Job.tmpl
databricks/dev/: databricks.ini
databricks/prod/: databricks.ini
databricks/test/: databricks.ini
docs/source/: conf.py  index.rst
notebooks/: 01_athena_ingestion.ipynb
src/ticketmaster_football_club_brentford/: __init__.py  __main__.py  hooks.py  settings.py
src/ticketmaster_football_club_brentford/datasets/: athena_sql_dataset.py
src/ticketmaster_football_club_brentford/pipelines/01_athena_ingestion/: __init__.py  nodes.py  pipeline.py
src/ticketmaster_football_club_brentford/pipelines/02_ticket_event_aggregation/: __init__.py  nodes.py  pipeline.py
src/ticketmaster_football_club_brentford/pipelines/03_member_categorisation/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/01_athena_ingestion/: test_pipeline.py
tests/pipelines/02_ticket_event_aggregation/: test_pipeline.py
tests/pipelines/03_member_categorisation/: test_pipeline.py
tests/pipelines/04_descriptive_analytics/: test_pipeline.py
tests/pipelines/05_event_feature_creation/: test_pipeline.py
tests/pipelines/06_member_feature_creation/: test_pipeline.py
tests/pipelines/07_live_forecasting_and_reporting/: test_pipeline.py
tests/pipelines/08_member_segmentation/: test_pipeline.py
tests/pipelines/09_season_ticket_attendance_prediction/: test_pipeline.py
tests/pipelines/10_reporting_outputs/: test_pipeline.py
(+21 files in other folders)
